--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<!-- Intro -->
 					<div id="intro">
 						<h1>Carolina Sinaga<br />
-						Portofolio</h1>
+						Portfolio</h1>
 						<p><strong>I have just completed my degree in Mathematics at Bandung Institute of Technology<a href="https://github.com/carolinssi/carolinssi" > @carolinssi</a><br />
 						Highly interested in Data Science and Data Analytics </strong></p>
 						<ul class="actions">
