--- a/index.html
+++ b/index.html
@@ -81,6 +81,18 @@
 								</article>
 								<article>
 									<header>
+										<!--<span class="date">April 7, 2017</span>-->
+										<h2><a href="https://github.com/carolinssi/carolinssi/blob/main/Project/Deep_Learning_Deteksi_Kebocoran_Pipa_Minyak.ipynb">Deep Learning Deteksi<br />
+										Kebocoran Pipa Minyak</a></h2>
+									</header>
+									<a href="https://github.com/carolinssi/carolinssi/blob/main/Project/Deep_Learning_Deteksi_Kebocoran_Pipa_Minyak.ipynb" class="image fit"><img src="images/pipeline.jpg" alt="" /></a>
+									<!--<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>-->
+									<ul class="actions special">
+										<li><a href="https://github.com/carolinssi/carolinssi/blob/main/Project/Deep_Learning_Deteksi_Kebocoran_Pipa_Minyak.ipynb" class="button">View Project</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
 										<!--<span class="date">April 22, 2017</span>-->
 										<h2><a href="https://github.com/carolinssi/carolinssi/blob/main/Project/3.%20House%20Proce%20Prediction.ipynb">House Price<br />
 										Prediction</a></h2>
@@ -163,18 +175,7 @@
 										<li><a href="https://github.com/carolinssi/carolinssi/blob/main/Project/19.%20Breast%20Cancer%20Classification%20using%20Machine%20Learning.ipynb" class="button">View Project</a></li>
 									</ul>
 								</article>
-								<article>
-									<header>
-										<!--<span class="date">April 7, 2017</span>-->
-										<h2><a href="https://github.com/carolinssi/carolinssi/blob/main/Colab%20Notebooks/Deep%20Learning%20Deteksi%20Kebocoran%20Pipa%20Minyak.ipynb">Deep Learning Deteksi<br />
-										Kebocoran Pipa Minyak</a></h2>
-									</header>
-									<a href="https://github.com/carolinssi/carolinssi/blob/main/Colab%20Notebooks/Deep%20Learning%20Deteksi%20Kebocoran%20Pipa%20Minyak.ipynb" class="image fit"><img src="images/pipeline.jpg" alt="" /></a>
-									<!--<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>-->
-									<ul class="actions special">
-										<li><a href="https://github.com/carolinssi/carolinssi/blob/main/Colab%20Notebooks/Deep%20Learning%20Deteksi%20Kebocoran%20Pipa%20Minyak.ipynb" class="button">View Project</a></li>
-									</ul>
-								</article>
+		
 							</section>
 
 						<!-- Footer -->
