--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
 					<div id="intro">
 						<h1>Carolina Sinaga<br />
 						Portfolio</h1>
-						<p><strong>I have just completed my degree in Mathematics at Bandung Institute of Technology<a href="https://github.com/carolinssi/carolinssi" > @carolinssi</a><br />
+						<p><strong> Mathematics - Bandung Institute of Technology<a href="https://github.com/carolinssi/carolinssi" > @carolinssi</a><br />
 						Highly interested in Data Science and Data Analytics </strong></p>
+						SQL, Python, R Programming </strong></p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
