--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 					<nav id="nav">
 						<ul class="links">
 							<li class="active"><a href="index.html">Projects</a></li>
-							<!--<li><a href="generic.html">My Final Project</a></li>-->
+							<li><a href="generic.html">My Final Project</a></li>
 							<!--<li><a href="elements.html">Elements Reference</a></li>-->
 						</ul>
 						<ul class="icons">
