--- a/generic.html
+++ b/generic.html
@@ -55,25 +55,25 @@
 								<article>
 									<header>
 										<!--<span class="date">April 24, 2017</span>-->
-										<h2><a href="https://github.com/carolinssi/carolinssi/blob/main/Project/Data_Exploration_Covid.sql">Data Exploration<br />
-										in SQL</a></h2>
+										<h2><a href="https://rpubs.com/carol_de/1128508">Dasar R<br />
+										in Rpubs</a></h2>
 									</header>
-									<a href="https://github.com/carolinssi/carolinssi/blob/main/Project/Data_Exploration_Covid.sql" class="image fit"><img src="images/covid19.jpg" alt="" /></a>
+									<a href="https://rpubs.com/carol_de/1128508" class="image fit"><img src="R.jpg" alt="" /></a>
 									<!--<p>Data Exploration of Covid 19 Dataset in SQL Server.</p>-->
 									<ul class="actions special">
-										<li><a href="https://github.com/carolinssi/carolinssi/blob/main/Project/Data_Exploration_Covid.sql" class="button">View Project</a></li>
+										<li><a https://rpubs.com/carol_de/1128508" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
 										<!--<span class="date">April 7, 2017</span>-->
-										<h2><a href="https://github.com/carolinssi/carolinssi/blob/main/Project/Deep_Learning_Deteksi_Kebocoran_Pipa_Minyak.ipynb">Deep Learning Deteksi<br />
-										Kebocoran Pipa Minyak</a></h2>
+										<h2><a href="https://rpubs.com/carol_de/1128537">Pre-Processing Data<br />
+										Data Exploration - Outlier Analysis</a></h2>
 									</header>
-									<a href="https://github.com/carolinssi/carolinssi/blob/main/Project/Deep_Learning_Deteksi_Kebocoran_Pipa_Minyak.ipynb" class="image fit"><img src="images/pipeline.jpg" alt="" /></a>
+									<a href="https://rpubs.com/carol_de/1128537" class="image fit"><img src="images/Pre-Processing.png" alt="" /></a>
 									<!--<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>-->
 									<ul class="actions special">
-										<li><a href="https://github.com/carolinssi/carolinssi/blob/main/Project/Deep_Learning_Deteksi_Kebocoran_Pipa_Minyak.ipynb" class="button">View Project</a></li>
+										<li><a href="https://rpubs.com/carol_de/1128537" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
