--- a/projects.html
+++ b/projects.html
@@ -37,8 +37,8 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="index.html">Projects</a></li>
-							<li><a href="generic.html">TSA Kominfo</a></li>
+							<li class="active"><a href="projects.html">Projects</a></li>
+							<li><a href="tsa.html">TSA Kominfo</a></li>
 							<!--<li><a href="elements.html">Elements Reference</a></li>-->
 						</ul>
 						<ul class="icons">
