--- a/projects.html
+++ b/projects.html
@@ -31,7 +31,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">Projects</a>
+						<a href="projects.html" class="logo">Projects</a>
 					</header>
 
 				<!-- Nav -->
