--- a/elements.html
+++ b/elements.html
@@ -19,14 +19,14 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="projects.html" class="logo">Massively</a>
+						<a href="index.html" class="logo">Massively</a>
 					</header>
 
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="projects.html">Projects</a></li>
-							<li><a href="tsa.html">TSA Kominfo</a></li>
+							<li class="active"><a href="index.html">Projects</a></li>
+							<li><a href="genetic.html">TSA Kominfo</a></li>
 							<!--<li><a href="elements.html">Elements Reference</a></li>-->
 						</ul>
 						<ul class="icons">
