--- a/generic.html
+++ b/generic.html
@@ -25,8 +25,8 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="index.html">Projects</a></li>
-							<li><a href="generic.html">TSA Kominfo</a></li>
+							<li><a href="index.html">Projects</a></li>
+							<li class="active"><a href="generic.html">TSA Kominfo</a></li>
 							<!--<li><a href="elements.html">Elements Reference</a></li>-->
 						</ul>
 						<ul class="icons">
@@ -48,7 +48,7 @@
 									TSA Kominfo - IPB University</h1>
 									<p>Training on Machine Learning and Data Mining in The Data Science Capabilies<br />
 									Applied the concepts and applications of statistical analysis and machine learning in various applied field cases<br />
-									getting overall score of 90.21/100</p>
+									Getting overall score of 90.21/100</p>
 							</section>
 						<!-- Posts -->
 							<section class="posts">
@@ -58,7 +58,7 @@
 										<h2><a href="https://rpubs.com/carol_de/1128508">Data Analysis<br />
 										Basic Concept</a></h2>
 									</header>
-									<a href="https://rpubs.com/carol_de/1128508" class="image fit"><img src="R.jpg" alt="" /></a>
+									<a href="https://rpubs.com/carol_de/1128508" class="image fit"><img src="images/R.jpg" alt="" /></a>
 									<!--<p>Data Exploration of Covid 19 Dataset in SQL Server.</p>-->
 									<ul class="actions special">
 										<li><a https://rpubs.com/carol_de/1128508" class="button">View Project</a></li>
