--- a/generic.html
+++ b/generic.html
@@ -57,6 +57,7 @@
 										<!--<span class="date">April 24, 2017</span>-->
 										<h2><a href="https://rpubs.com/carol_de/1128508">Data Analysis<br />
 										Basic Concept</a></h2>
+										<p>Konsep Dasar Statistika & Dasar Pemrograman: R Software</p>
 									</header>
 									<a href="https://rpubs.com/carol_de/1128508" class="image fit"><img src="images/R.jpg" alt="" /></a>
 									<!--<p>Data Exploration of Covid 19 Dataset in SQL Server.</p>-->
