--- a/index.html
+++ b/index.html
@@ -94,6 +94,18 @@
 								</article>
 								<article>
 									<header>
+										<!--<span class="date">April 7, 2017</span>-->
+										<h2><a href="https://rpubs.com/carol_de/1128591">Unsupervised Learning<br />
+										Customer Segmentation</a></h2>
+									</header>
+									<a href="https://rpubs.com/carol_de/1128591" class="image fit"><img src="images/customer.png" alt="" /></a>
+									<!--<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>-->
+									<ul class="actions special">
+										<li><a href="https://rpubs.com/carol_de/1128591" class="button">View Project</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
 										<!--<span class="date">April 11, 2017</span>-->
 										<h2><a href="https://github.com/carolinssi/carolinssi/blob/main/Project/8.%20Gold%20Price%20Predicition%20using%20Machine%20Learning.ipynb">Gold Price Prediction<br />
 										Using Machine Learning</a></h2>
