--- a/generic.html
+++ b/generic.html
@@ -68,6 +68,18 @@
 								<article>
 									<header>
 										<!--<span class="date">April 7, 2017</span>-->
+										<h2><a href="https://rpubs.com/carol_de/1128591">Unsupervised Learning<br />
+										Customer Segmentation</a></h2>
+									</header>
+									<a href="https://rpubs.com/carol_de/1128591" class="image fit"><img src="images/customer.png" alt="" /></a>
+									<!--<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>-->
+									<ul class="actions special">
+										<li><a href="https://rpubs.com/carol_de/1128591" class="button">View Project</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<!--<span class="date">April 7, 2017</span>-->
 										<h2><a href="https://rpubs.com/carol_de/1128537">Pre-Processing Data<br /></a></h2>
 										<p>Data Exploration - Outlier Analysis</p>
 									</header>
