--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
 								<article>
 									<header>
 										<!--<span class="date">April 7, 2017</span>-->
-										<h2><a href="https://rpubs.com/carol_de/1130128">Unsupervised Learning<br />
-										Customer Segmentation</a></h2>
+										<h2><a href="https://rpubs.com/carol_de/1130128">Supervised Learning<br />
+										Telco Customer Churn Prevention</a></h2>
 									</header>
 									<a href="https://rpubs.com/carol_de/1130128" class="image fit"><img src="images/telco-churn.png" alt="" /></a>
 									<!--<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>-->
