--- a/generic.html
+++ b/generic.html
@@ -116,6 +116,30 @@
 								<article>
 									<header>
 										<!--<span class="date">April 7, 2017</span>-->
+										<h2><a href="https://rpubs.com/carol_de/1130140">Supervised Learning<br />
+										Regresi Linear dan Regresi Logistik</a></h2>
+									</header>
+									<a href="https://rpubs.com/carol_de/1130140" class="image fit"><img src="images/supervised-regresi.jpg" alt="" /></a>
+									<!--<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>-->
+									<ul class="actions special">
+										<li><a href="https://rpubs.com/carol_de/1130140" class="button">View Project</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<!--<span class="date">April 7, 2017</span>-->
+										<h2><a href="https://rpubs.com/carol_de/1130144">Supervised Learning<br />
+										Classification and Regression Tree (CART)</a></h2>
+									</header>
+									<a href="https://rpubs.com/carol_de/1130144" class="image fit"><img src="images/supervised-cart.jpg" alt="" /></a>
+									<!--<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>-->
+									<ul class="actions special">
+										<li><a href="https://rpubs.com/carol_de/1130144" class="button">View Project</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<!--<span class="date">April 7, 2017</span>-->
 										<h2><a href="https://rpubs.com/carol_de/1128554">Time Series & Forecasting<br /></a></h2>
 										<p>Metode Smoothing, ARIMA, ARCH/ GARCH, Vector Auto Regressive (VAR)</p>
 									</header>
@@ -135,6 +159,18 @@
 									<!--<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>-->
 									<ul class="actions special">
 										<li><a href="https://rpubs.com/carol_de/1128557" class="button">View Project</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<!--<span class="date">April 7, 2017</span>-->
+										<h2><a href="https://rpubs.com/carol_de/1130158">Text Analytics<br />
+										Web Scrapping</a></h2>
+									</header>
+									<a href="https://rpubs.com/carol_de/1130158" class="image fit"><img src="images/web-scraping.png" alt="" /></a>
+									<!--<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>-->
+									<ul class="actions special">
+										<li><a href="https://rpubs.com/carol_de/1130158" class="button">View Project</a></li>
 									</ul>
 								</article>
 
