--- a/generic.html
+++ b/generic.html
@@ -167,7 +167,7 @@
 										<h2><a href="https://rpubs.com/carol_de/1130158">Text Analytics<br />
 										Web Scrapping</a></h2>
 									</header>
-									<a href="https://rpubs.com/carol_de/1130158" class="image fit"><img src="images/web-scraping.png" alt="" /></a>
+									<a href="https://rpubs.com/carol_de/1130158" class="image fit"><img src="images/web-scraping.jpeg" alt="" /></a>
 									<!--<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>-->
 									<ul class="actions special">
 										<li><a href="https://rpubs.com/carol_de/1130158" class="button">View Project</a></li>
