--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 									<!--<span class="date">April 25, 2017</span>>-->
 									<h2><a href="https://github.com/carolinssi/carolinssi/blob/main/Project/Data_Cleaning_NashvilleHousing.sql">Data Cleaning in<br />
 									SQL</a></h2>
-									<!--<p>In this project I clean housing data in SQL Server</p>-->
+									<p>In this project I clean housing data in SQL Server</p>
 								</header>
 								<a href="https://github.com/carolinssi/carolinssi/blob/main/Project/Data_Cleaning_NashvilleHousing.sql" class="image main"><img src="images/data_cleaning.jpg" alt="" /></a>
 								<ul class="actions special">
@@ -75,7 +75,7 @@
 										in SQL</a></h2>
 									</header>
 									<a href="https://github.com/carolinssi/carolinssi/blob/main/Project/Data_Exploration_Covid.sql" class="image fit"><img src="images/covid19.jpg" alt="" /></a>
-									<!--<p>Data Exploration of Covid 19 Dataset in SQL Server.</p>-->
+									<p>Data Exploration of Covid 19 Dataset in SQL Server.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/carolinssi/carolinssi/blob/main/Project/Data_Exploration_Covid.sql" class="button">View Project</a></li>
 									</ul>
@@ -87,7 +87,7 @@
 										Kebocoran Pipa Minyak</a></h2>
 									</header>
 									<a href="https://github.com/carolinssi/carolinssi/blob/main/Project/Deep_Learning_Deteksi_Kebocoran_Pipa_Minyak.ipynb" class="image fit"><img src="images/pipeline.jpg" alt="" /></a>
-									<!--<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>-->
+									<p> The Application of Deep Learning Methods in Modeling Oil Pipeline</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/carolinssi/carolinssi/blob/main/Project/Deep_Learning_Deteksi_Kebocoran_Pipa_Minyak.ipynb" class="button">View Project</a></li>
 									</ul>
@@ -95,13 +95,14 @@
 								<article>
 									<header>
 										<!--<span class="date">April 7, 2017</span>-->
-										<h2><a href="https://rpubs.com/carol_de/1128591">Unsupervised Learning<br />
+										<h2><a href="https://rpubs.com/carol_de/1130211">Unsupervised Learning<br />
 										Customer Segmentation</a></h2>
 									</header>
-									<a href="https://rpubs.com/carol_de/1128591" class="image fit"><img src="images/customer.png" alt="" /></a>
-									<!--<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>-->
+									<a href="https://rpubs.com/carol_de/1130211" class="image fit"><img src="images/customer.png" alt="" /></a>
+									<p> Company XYZ produces and sells baby products, one of which is baby milk. We can purchase baby milk with a membership or not.Purchasing with membership allows customers to take part in loyalty programs, and also makes it possible for companies to carry out Customer Segmentation using Data Science on customers with membership.<br />
+									This project is about applied data science for Customer Segmentation </p>
 									<ul class="actions special">
-										<li><a href="https://rpubs.com/carol_de/1128591" class="button">View Project</a></li>
+										<li><a href="https://rpubs.com/carol_de/1130211" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
@@ -111,7 +112,7 @@
 										Telco Customer Churn Prevention</a></h2>
 									</header>
 									<a href="https://rpubs.com/carol_de/1130128" class="image fit"><img src="images/telco-churn.png" alt="" /></a>
-									<!--<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>-->
+									<p> The objectives of this project are identifying characteristics of customers who will churn and stay, Predicting customers who are likely to churn (unsubscribe) from postpaid mobile plans in the next month, and From a business perspective, what actions can be taken after obtaining the churn prediction model? </p>
 									<ul class="actions special">
 										<li><a href="https://rpubs.com/carol_de/1130128" class="button">View Project</a></li>
 									</ul>
@@ -123,7 +124,7 @@
 										<p>Water Level Forecasting - SARIMA</p>
 									</header>
 									<a href="https://rpubs.com/carol_de/1128557" class="image fit"><img src="images/marina-ancol.jpg" alt="" /></a>
-									<!--<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>-->
+									<p> Predicting the Sea Level of Marina Ancol for the next 6 hours based on the latest data. The data utilized comprises hourly sea level (Tinggi Muka Air or TMA) at Marina Ancol during the period from January 1, 2021, 00:00 WIB, to June 1, 2023, 00:00 WIB.</p>
 									<ul class="actions special">
 										<li><a href="https://rpubs.com/carol_de/1128557" class="button">View Project</a></li>
 									</ul>
