--- a/index.html
+++ b/index.html
@@ -56,18 +56,32 @@
 							<article class="post featured">
 								<header class="major">
 									<!--<span class="date">April 25, 2017</span>>-->
-									<h2><a href="https://github.com/carolinssi/carolinssi/blob/main/Project/Data_Cleaning_NashvilleHousing.sql">Data Cleaning in<br />
-									SQL</a></h2>
-									<p>In this project I clean housing data in SQL Server</p>
+									<h2><a href="https://rpubs.com/carol_de/1140746">Credit Risk<br />
+									Prediction</a></h2>
+									<p> Prediksi terhadap suatu individu akan kemampuan mereka untuk melakukan pembayaran terhadap pinjaman/kredit yang diberikan<br />
+									Dilakukan dengan pengerjaan end-to-end solution </p>
 								</header>
-								<a href="https://github.com/carolinssi/carolinssi/blob/main/Project/Data_Cleaning_NashvilleHousing.sql" class="image main"><img src="images/data_cleaning.jpg" alt="" /></a>
+								<a href="https://rpubs.com/carol_de/1140746" class="image main"><img src="images/credit_risk.jpg" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="https://github.com/carolinssi/carolinssi/blob/main/Project/Data_Cleaning_NashvilleHousing.sql" class="button large">View Project</a></li>
+									<li><a href="hhttps://rpubs.com/carol_de/1140746" class="button large">View Project</a></li>
 								</ul>
 							</article>
 
 						<!-- Posts -->
 							<section class="posts">
+								<article>
+									<header>
+										<!--<span class="date">April 24, 2017</span>-->
+										<h2><a href="https://github.com/carolinssi/carolinssi/blob/main/Project/Data_Cleaning_NashvilleHousing.sql">Data Cleaning in<br />
+										SQL</a></h2>
+										<p>In this project I clean housing data in SQL Server</p>
+									</header>
+									<a href="https://github.com/carolinssi/carolinssi/blob/main/Project/Data_Cleaning_NashvilleHousing.sql" class="image fit"><img src="images/data_cleaning.jpg" alt="" /></a>
+									<p>Data Exploration of Covid 19 Dataset in SQL Server.</p>
+									<ul class="actions special">
+										<li><a href="https://github.com/carolinssi/carolinssi/blob/main/Project/Data_Cleaning_NashvilleHousing.sql" class="button>View Project</a></li>
+									</ul>
+								</article>
 								<article>
 									<header>
 										<!--<span class="date">April 24, 2017</span>-->
