--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 									<a href="https://github.com/carolinssi/carolinssi/blob/main/Project/Data_Cleaning_NashvilleHousing.sql" class="image fit"><img src="images/data_cleaning.jpg" alt="" /></a>
 									<p>Data Exploration of Covid 19 Dataset in SQL Server.</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/carolinssi/carolinssi/blob/main/Project/Data_Cleaning_NashvilleHousing.sql" class="button>View Project</a></li>
+										<li><a href="https://github.com/carolinssi/carolinssi/blob/main/Project/Data_Cleaning_NashvilleHousing.sql" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
