--- a/index.html
+++ b/index.html
@@ -144,87 +144,28 @@
 								<article>
 									<header>
 										<!--<span class="date">April 11, 2017</span>-->
-										<h2><a href="https://github.com/carolinssi/carolinssi/blob/main/Project/8.%20Gold%20Price%20Predicition%20using%20Machine%20Learning.ipynb">Gold Price Prediction<br />
-										Using Machine Learning</a></h2>
+										<h2><a href="https://colab.research.google.com/drive/1De0Vb1DdOZxljJzjm41ZnN0NwWdxKdiS?usp=sharing">Customer Churn Detection<br />
+										Using Machine Learning - Gradient Boosting Classifier</a></h2>
 									</header>
-									<a href="https://github.com/carolinssi/carolinssi/blob/main/Project/8.%20Gold%20Price%20Predicition%20using%20Machine%20Learning.ipynb" class="image fit"><img src="images/gold.png" alt="" /></a>
+									<a href="https://colab.research.google.com/drive/1De0Vb1DdOZxljJzjm41ZnN0NwWdxKdiS?usp=sharing" class="image fit"><img src="customer_churn.jpg" alt="" /></a>
 									<!--<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>-->
 									<ul class="actions special">
-										<li><a href="https://github.com/carolinssi/carolinssi/blob/main/Project/8.%20Gold%20Price%20Predicition%20using%20Machine%20Learning.ipynb" class="button">View Project</a></li>
+										<li><a href="https://colab.research.google.com/drive/1De0Vb1DdOZxljJzjm41ZnN0NwWdxKdiS?usp=sharing" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
 										<!--<span class="date">April 7, 2017</span>-->
-										<h2><a href="https://github.com/carolinssi/carolinssi/blob/main/Project/19.%20Breast%20Cancer%20Classification%20using%20Machine%20Learning.ipynb">Breast Cancer Classification<br />
-										Using Machine Learning</a></h2>
+										<h2><a href="https://lookerstudio.google.com/u/0/reporting/31adf3ba-433a-4597-a0d2-75c9f6a958fc/page/EZwrD">Covid-19 Dashboard<br />
+										Indonesia Cases</a></h2>
 									</header>
-									<a href="https://github.com/carolinssi/carolinssi/blob/main/Project/19.%20Breast%20Cancer%20Classification%20using%20Machine%20Learning.ipynb" class="image fit"><img src="images/cancer.jpeg" alt="" /></a>
+									<a href="https://lookerstudio.google.com/u/0/reporting/31adf3ba-433a-4597-a0d2-75c9f6a958fc/page/EZwrD" class="image fit"><img src="covid19_dashboard.png" alt="" /></a>
 									<!--<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>-->
 									<ul class="actions special">
-										<li><a href="https://github.com/carolinssi/carolinssi/blob/main/Project/19.%20Breast%20Cancer%20Classification%20using%20Machine%20Learning.ipynb" class="button">View Project</a></li>
+										<li><a href="https://lookerstudio.google.com/u/0/reporting/31adf3ba-433a-4597-a0d2-75c9f6a958fc/page/EZwrD" class="button">View Project</a></li>
 									</ul>
 								</article>
-								<article>
-									<header>
-										<!--<span class="date">April 7, 2017</span>-->
-										<h2><a href="https://github.com/carolinssi/carolinssi/blob/main/Project/18.%20Movie%20Recommendation%20System%20using%20Machine%20Learning.ipynb">Movie Recommendation System<br />
-										Using Machine Learning</a></h2>
-									</header>
-									<a href="https://github.com/carolinssi/carolinssi/blob/main/Project/18.%20Movie%20Recommendation%20System%20using%20Machine%20Learning.ipynb" class="image fit"><img src="images/movie.png" alt="" /></a>
-									<!--<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>-->
-									<ul class="actions special">
-										<li><a href="https://github.com/carolinssi/carolinssi/blob/main/Project/18.%20Movie%20Recommendation%20System%20using%20Machine%20Learning.ipynb" class="button">View Project</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<!--<span class="date">April 7, 2017</span>-->
-										<h2><a href="https://github.com/carolinssi/carolinssi/blob/main/Project/10.%20Credit%20Fraud%20Data%20Detection.ipynb">Credit Fraud Data<br />
-										Detection</a></h2>
-									</header>
-									<a href="https://github.com/carolinssi/carolinssi/blob/main/Project/10.%20Credit%20Fraud%20Data%20Detection.ipynb" class="image fit"><img src="images/credit_fraud.jpg" alt="" /></a>
-									<!--<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>-->
-									<ul class="actions special">
-										<li><a href="https://github.com/carolinssi/carolinssi/blob/main/Project/10.%20Credit%20Fraud%20Data%20Detection.ipynb" class="button">View Project</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<!--<span class="date">April 22, 2017</span>-->
-										<h2><a href="https://github.com/carolinssi/carolinssi/blob/main/Project/3.%20House%20Proce%20Prediction.ipynb">House Price<br />
-										Prediction</a></h2>
-									</header>
-									<a href="https://github.com/carolinssi/carolinssi/blob/main/Project/3.%20House%20Proce%20Prediction.ipynb" class="image fit"><img src="images/house_price.png" alt="" /></a>
-									<!--<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>-->
-									<ul class="actions special">
-										<li><a href="https://github.com/carolinssi/carolinssi/blob/main/Project/3.%20House%20Proce%20Prediction.ipynb" class="button">View Project</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<!--<span class="date">April 18, 2017</span>-->
-										<h2><a href="https://github.com/carolinssi/carolinssi/blob/main/Project/5.%20Loan%20Status%20Prediction.ipynb">Loan Status<br />
-										Prediction</a></h2>
-									</header>
-									<a href="https://github.com/carolinssi/carolinssi/blob/main/Project/5.%20Loan%20Status%20Prediction.ipynb" class="image fit"><img src="images/loan_status.png" alt="" /></a>
-									<!--<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>-->
-									<ul class="actions special">
-										<li><a href="https://github.com/carolinssi/carolinssi/blob/main/Project/5.%20Loan%20Status%20Prediction.ipynb" class="button">View Project</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<!--<span class="date">April 14, 2017</span>-->
-										<h2><a href="https://github.com/carolinssi/carolinssi/blob/main/Project/7.%20Car%20Price%20Prediction.ipynb">Car Price<br />
-										Prediction</a></h2>
-									</header>
-									<a href="https://github.com/carolinssi/carolinssi/blob/main/Project/7.%20Car%20Price%20Prediction.ipynb" class="image fit"><img src="images/car_price.jpeg" alt="" /></a>
-									<!--<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>-->
-									<ul class="actions special">
-										<li><a href="https://github.com/carolinssi/carolinssi/blob/main/Project/7.%20Car%20Price%20Prediction.ipynb" class="button">View Project</a></li>
-									</ul>
-								</article>
+		
 							</section>
 
 						<!-- Footer -->
