--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 										<h2><a href="https://colab.research.google.com/drive/1De0Vb1DdOZxljJzjm41ZnN0NwWdxKdiS?usp=sharing">Customer Churn Detection<br />
 										Using Machine Learning - Gradient Boosting Classifier</a></h2>
 									</header>
-									<a href="https://colab.research.google.com/drive/1De0Vb1DdOZxljJzjm41ZnN0NwWdxKdiS?usp=sharing" class="image fit"><img src="customer_churn.jpg" alt="" /></a>
+									<a href="https://colab.research.google.com/drive/1De0Vb1DdOZxljJzjm41ZnN0NwWdxKdiS?usp=sharing" class="image fit"><img src="images/customer_churn.jpg" alt="" /></a>
 									<!--<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>-->
 									<ul class="actions special">
 										<li><a href="https://colab.research.google.com/drive/1De0Vb1DdOZxljJzjm41ZnN0NwWdxKdiS?usp=sharing" class="button">View Project</a></li>
@@ -159,7 +159,7 @@
 										<h2><a href="https://lookerstudio.google.com/u/0/reporting/31adf3ba-433a-4597-a0d2-75c9f6a958fc/page/EZwrD">Covid-19 Dashboard<br />
 										Indonesia Cases</a></h2>
 									</header>
-									<a href="https://lookerstudio.google.com/u/0/reporting/31adf3ba-433a-4597-a0d2-75c9f6a958fc/page/EZwrD" class="image fit"><img src="covid19_dashboard.png" alt="" /></a>
+									<a href="https://lookerstudio.google.com/u/0/reporting/31adf3ba-433a-4597-a0d2-75c9f6a958fc/page/EZwrD" class="image fit"><img src="images/covid19_dashboard.png" alt="" /></a>
 									<!--<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>-->
 									<ul class="actions special">
 										<li><a href="https://lookerstudio.google.com/u/0/reporting/31adf3ba-433a-4597-a0d2-75c9f6a958fc/page/EZwrD" class="button">View Project</a></li>
